# canopy

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  GOVERNANCE.md  README.md
agent-runs/: 20260720-batched-leaf-2.json  20260720-bootstrap-1.json  20260720-generation-modes-5.json  20260720-junctions-roots-3.json  20260720-leaf-frond-material-4.json  20260720-wind-growth-seasons-6.json  20260721-gltf-export-7.json  20260721-runtime-forest-8.json  20260721-threejs-production-pack-9.json  20260722-impostor-alpha-rasterization-10.json  20260723-biome-vegetation-concepts-1.json  20260724-cartoon-tree-concepts-1.json  README.md  run-record.schema.json
apps/cli/: CMakeLists.txt
apps/cli/src/: main.cpp
apps/runtime-viewer/: CMakeLists.txt
apps/runtime-viewer/src/: main.cpp
benchmarks/: BASELINE.md  CMakeLists.txt  baseline-554f595.json  baseline-optimized.json
benchmarks/src/: bench_canopy.cpp
cmake/: CanopyWarnings.cmake
docs/adr/: 0001-bootstrap-layout-and-zero-deps.md  0002-canonical-json-and-hash.md  0003-named-random-streams.md  0004-material-model-v1.md  0005-defer-viewport-order-generation-modes.md  0006-timeline-slice-wind-growth-seasons.md  0007-gltf-exporter.md  0008-canopyrt-v1.md  0009-threejs-production-pack.md  README.md  template.md
docs/integrations/: README.md  three_js.md
docs/project_canopy_design_pack/: 00_README.md  01_EXECUTIVE_SPEC.md  02_PARITY_BASELINE.md  03_PRODUCT_REQUIREMENTS.md  04_SYSTEM_ARCHITECTURE.md  05_REPOSITORY_AND_BUILD.md  06_DATA_MODEL_AND_FILE_FORMATS.md  07_EVALUATION_ENGINE.md  08_GENERATORS.md  09_BRANCH_MESHING.md  10_FOLIAGE_VINES_AND_DETAILS.md  11_MANUAL_EDITING.md  12_MATERIALS_TEXTURES_AND_PHOTOGRAMMETRY.md  13_WIND_GROWTH_AND_SEASONS.md  14_LOD_BILLBOARDS_AND_OPTIMIZATION.md  15_VIEWPORT_AND_EDITOR_UX.md  16_EXPORT_PIPELINE.md  17_RUNTIME_SDK_AND_FOREST.md  18_ENGINE_AND_DCC_INTEGRATIONS.md  19_SCRIPTING_PLUGINS_AND_AUTOMATION.md  20_ASSET_LIBRARY_AND_VARIATION.md  21_PUBLIC_API_CONTRACTS.md  22_NONFUNCTIONAL_REQUIREMENTS.md  23_TEST_STRATEGY.md  24_AGENT_IMPLEMENTATION_PLAYBOOK.md  25_EPICS_AND_TASKS.md  26_RELEASE_GATES.md  27_RISK_REGISTER.md  28_CLEAN_ROOM_AND_LICENSING.md  29_ARCHITECTURE_DECISIONS.md  30_GLOSSARY.md  31_OFFICIAL_SOURCES.md  32_ACCEPTANCE_CHECKLIST.md  33_AGENT_PROMPT_TEMPLATES.md  34_BOOTSTRAP_BACKLOG.md  35_PACK_MANIFEST.md
integrations/threejs/: README.md  canopy-lod.js  canopy-wind.js
samples/cartoon/: README.md
samples/cartoon/documents/ToonBigTop.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/cartoon/documents/ToonBroadSpread.canopyproj/: graph.json  manifest.json  properties.json
samples/cartoon/documents/ToonBush.canopyproj/: graph.json  manifest.json  properties.json
samples/cartoon/documents/ToonLeaner.canopyproj/: graph.json  manifest.json  properties.json
samples/cartoon/documents/ToonRoundTop.canopyproj/: graph.json  manifest.json  properties.json
samples/cartoon/documents/ToonSapling.canopyproj/: graph.json  manifest.json  properties.json
samples/concepts/: README.md
samples/documents/AlpineFir.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/documents/CoastalOak.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/documents/IslandPalm.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/documents/NebulaSporeTree.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/documents/RiverBirch.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/documents/WeepingWillow.canopyproj/: graph.json  manifest.json  materials.json  properties.json
samples/impostors/: AlpineFir.glb  CoastalOak.glb  IslandPalm.glb  RiverBirch.glb  WeepingWillow.glb
src/document/: CMakeLists.txt
src/document/include/canopy/document/: document.hpp  project_io.hpp  registry.hpp
src/document/src/: document.cpp  project_io.cpp  registry.cpp
src/evaluation/: CMakeLists.txt
src/evaluation/src/: evaluate.cpp
src/export/: CMakeLists.txt
src/export/include/canopy/export/: gltf_export.hpp  mesh_merge.hpp  obj_export.hpp  rt_compile.hpp
src/export/src/: gltf_export.cpp  mesh_merge.cpp  obj_export.cpp  rt_compile.cpp
src/foundation/: CMakeLists.txt
src/foundation/include/canopy/foundation/: curve.hpp  diagnostics.hpp  hash.hpp  ids.hpp  json.hpp  random.hpp  vec.hpp
src/foundation/src/: curve.cpp  diagnostics.cpp  hash.cpp  ids.cpp  json.cpp  random.cpp
src/geometry/: CMakeLists.txt
src/geometry/include/canopy/geometry/: frames.hpp  polygon.hpp  spline.hpp  sweep.hpp
src/geometry/src/: frames.cpp  polygon.cpp  spline.cpp  sweep.cpp
src/runtime/core/: CMakeLists.txt
src/runtime/core/include/canopy/runtime/: format.hpp  model.hpp
src/runtime/core/src/: loader.cpp
src/runtime/forest/: CMakeLists.txt
src/runtime/forest/src/: forest.cpp
tests/: canopy_test.hpp
tests/assets/MinimalTrunk.canopyproj/: graph.json  manifest.json  materials.json  properties.json
tests/integration/: CMakeLists.txt  test_project_io.cpp
tests/presets/: gltf-lods.json  gltf.json  obj-diagnostic.json
tests/unit/: CMakeLists.txt  test_curve.cpp  test_document.cpp  test_evaluate.cpp  test_geometry.cpp  test_gltf.cpp  test_hash.cpp  test_ids.cpp  test_json.cpp  test_random.cpp  test_runtime.cpp
tools/showcase/: README.md  generate_biome_concepts.py  generate_cartoon_concepts.py  generate_documents.py  generate_textures.py  make_impostors.py  render_animations.py  render_biome_concepts.py  render_cartoon_concepts.py  render_forest.py  render_lod.py  render_showcase.py
tools/showcase/presets/: obj-cartoon.json
(+25 files in other folders)
