function(canopy_unit_test name)
  add_executable(${name} ${name}.cpp)
  target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/tests)
  target_link_libraries(${name} PRIVATE ${ARGN} canopy_warnings)
  add_test(NAME ${name} COMMAND ${name})
endfunction()

canopy_unit_test(test_hash canopy::foundation)
canopy_unit_test(test_json canopy::foundation)
canopy_unit_test(test_ids canopy::foundation)
canopy_unit_test(test_random canopy::foundation)
canopy_unit_test(test_curve canopy::foundation)
canopy_unit_test(test_document canopy::document)
canopy_unit_test(test_geometry canopy::geometry)
canopy_unit_test(test_evaluate canopy::evaluation)
